# headsetcontrol_tray

./: .coverage  .gitignore  HID_RESEARCH.md  INSTRUCTIONS.md  JULES.md  LICENSE  PROJECT_STANDARDS.md  README.md  __main__.py  app.py  app_config.py  architecture.dsl  asset_url_map.json  batch_process_docs.py  config_manager.py  coverage.xml  crawl_dsl_docs.py  crawl_site_docs.py  docker-compose.yml  headset_service.py  html_url_map.json  install_uv.sh  mypy.ini  mypy_type_checking_report.txt  process_doc_page.py  project_setup_test_summary.md  pyproject.toml  requirements.txt  ruff_errors.json  strategic_plan_proposal.md  test_dependencies.py  url_to_local_path_map.json  verify_markdown_links.py  vulture_whitelist.py
.ci/: initial-setup.sh
docs/: STRUCTURIZR.md
docs/architecture/adr/: 0001-use-python-for-application-development.adoc  0002-use-pyside6-for-gui-toolkit.adoc  0003-use-direct-hid-communication.adoc
docs/architecture/src/: 01_introduction_and_goals.adoc  02_architecture_constraints.adoc  03_context_and_scope.adoc  04_solution_strategy.adoc  05_building_block_view.adoc  06_runtime_view.adoc  07_deployment_view.adoc  08_concepts.adoc  09_architecture_decisions.adoc  10_quality_requirements.adoc  11_technical_risks.adoc  12_glossary.adoc
docs/architecture/structurizr/: workspace.dsl
docs/code_review/2025-06-06/: comprehensive_code_review_report.md  final_code_review_report_pass1.md  recommended_development_guidelines.md
docs/structurizr/dsl/: adrs.md  archetypes.md  basics.md  defaults.md  docs.md  example.md  expressions.md  faq.md  identifiers.md  implied-relationships.md  includes.md  index.md  language.md  plugins.md  scripts.md  tutorial.md  workspace-extension.md
docs/structurizr/quickstart/: index.md
dummy/: custom_eq_curves.json
headsetcontrol_tray/: .gitkeep  __main__.py  app.py  app_config.py  config_manager.py  headset_service.py
headsetcontrol_tray/tests/: conftest.py  test_app.py  test_headset_service.py
headsetcontrol_tray/ui/: chatmix_manager.py  equalizer_editor_widget.py  settings_dialog.py  system_tray_icon.py
polkit/: com.github.headsetcontroltray.headsetcontroltray.installrules.policy
scripts/: generate-structurizr-svg.sh  install-udev-rules.sh  quality.sh  run.sh  setup_dev_env.sh  test.sh
src/: .gitkeep
src/headsetcontrol_tray/: __init__.py  __main__.py  app.py  app_config.py  config_manager.py  exceptions.py  headset_service.py  headset_status.py  hid_communicator.py  hid_manager.py  udev_manager.py
src/headsetcontrol_tray/os_layer/: __init__.py  base.py  linux.py  macos.py  (+1 more)
steelseries_tray/: headset_service.py
structurizr/: workspace.dsl
tests/: __init__.py  test_app.py  test_config_manager.py  test_headset_service.py  test_headset_status.py  test_hid_communicator.py  test_hid_manager.py  test_main.py  test_udev_manager.py  whitelist.py
tests/os_layer/: __init__.py  test_linux.py  test_macos.py  test_windows.py
tests/ui/: __init__.py  test_headset_polling_service.py  test_system_tray_icon_refactored.py  test_tray_icon_painter.py  test_tray_menu_manager.py  test_tray_tooltip_manager.py
ui/: chatmix_manager.py  equalizer_editor_dialog.py  equalizer_editor_widget.py  settings_dialog.py  system_tray_icon.py
(+67 files in other folders)
