[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hid>=1.0.7",
    "hidapi>=0.14.0.post4",
    "pyside6>=6.9.0",
    "shiboken6>=6.9.0",
    "verboselogs>=1.7",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.13",
]
